--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+# mongodb+srv://Matematuka:Matematuka1!@clusterofmine.joepaz1.mongodb.net/?retryWrites=true&w=majority&appName=ClusterOfMine
+
 PORT=
 MONGODB_USER=
 MONGODB_PASSWORD=
