--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "type": "module",
   "main": "src/index.js",
   "scripts": {
-    "lint": "eslint .",
-    "start": "node ./src/index.js",
-    "dev": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon src/index.js | pino-pretty",
+    "start": "node src/index.js",
     "build": "npm run build-docs",
     "build-docs": "redocly bundle --ext json -o docs/swagger.json",
     "preview-docs": "redocly preview-docs"
@@ -17,12 +16,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@eslint/js": "^9.3.0",
-    "@redocly/cli": "^1.17.0",
-    "eslint": "^9.3.0",
-    "globals": "^15.3.0",
-    "nodemon": "^3.1.1",
-    "pino-pretty": "^11.1.0"
+    "@eslint/js": "^9.2.0",
+    "@redocly/cli": "^1.15.0",
+    "eslint": "^9.2.0",
+    "globals": "^15.2.0",
+    "nodemon": "^3.1.0",
+    "pino-pretty": "^11.0.0"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -31,15 +30,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "google-auth-library": "^9.11.0",
     "handlebars": "^4.7.8",
     "http-errors": "^2.0.0",
     "joi": "^17.13.1",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.6.2",
     "mongoose": "^8.4.0",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.14",
-    "pino-http": "^10.1.0"
+    "nodemailer": "^6.9.13",
+    "pino-http": "^10.1.0",
+    "swagger-ui-express": "^5.0.1"
   }
 }
